Release history for JooseX.Namespace.Depended

{{ $NEXT }}

0.16      2011-01-23 12:40

    - minor performance improvement - avoid extra `prepareProperties` call, instead call directly to SUPER method
    
    - fixed bug, when the loaded scripts could not use require (`runInThisContext` runs the scripts in clear scope, which
      doesn't have usual node globals, like `require`)

0.15      2011-01-12 21:40

    - "eval" materializer now evalutes the code in the global scope (indirect eval or `execScript` in IE)
    - more robust detection whether we run in Test.Run scope or in normal interpreter (allows to have file names in stack traces)

0.14      2010-12-14 20:48

    - bumped deps
    - tests for lazy classes upgraded to recent changes in JooseX.Meta.Lazy
    - throw Error instances and not strings in several places

0.13      2010-12-09 21:10

    - fixed bug, when the current module was not being taken into account during deps loading 
    (affected classes wrapped with Modules) 

    - default Materialization role switched back to Eval, since its been finally turned out, that Firebug
    *can* debug the code, executed with "eval". In the same time, Firebug *can't* (at least AFAIK) debug
    the code, executed with assignment to `text` property of <script> tag 

0.12      2010-11-18 22:09

    - various docs updates
    
    - uncommented tests for dependencies in "Lazy" classes on NodeJS platform
    
    - JooseX.Meta.Lazy excluded from the `Auto` bundle (was only required for testing) 
    - JooseX.SimpleRequest included into the `Web` bundle
    
    - removed XHRSync transport, as it turned out that truly synchronous mode won't support files concatenation 
    
    - `use.paths` is now the preferred way to specify the INC paths instead of `JooseX.Namespace.Depended.Manager.my.INC`
       using `JooseX.Namespace.Depended.Manager.my.INC` is still supported but will be removed in some of the future releases
       