@@ -14,6 +14,13 @@ Role('JooseX.Namespace.Depended', {
     
     override: {
         
+//        GETCURRENT : function () {
+//            var currentModule   = this.getCurrent()
+//            
+//            return currentModule == Joose.top ? 'TOP' : currentModule.meta.name
+//        },
+        
+        
         prepareProperties : function (name, extend, defaultMeta, callback) {
             if (name && typeof name != 'string') {
                 extend = name
@@ -24,6 +31,11 @@ Role('JooseX.Namespace.Depended', {
             
             var summaredDeps    = this.collectAllDeps(extend)
             var currentModule   = this.getCurrent()
+            
+            if (currentModule !== Joose.top && !currentModule.meta) {
+                require('console').log("CURRENT MODULE: %s", require('util').inspect(currentModule))
+                require('console').log("TOP: %s", require('util').inspect(Joose.top))
+            }
             
             var resource = JooseX.Namespace.Depended.Manager.my.getResource({
                 type    : 'joose',
@@ -58,39 +70,42 @@ Role('JooseX.Namespace.Depended', {
                 
                 return res
             } else {
-                // defer the dependencies loading, because they actually could be provided later in the same bundle file
-                // this, however, affect performance, so bundles should be created in the dependencies-ordered way
-                setTimeout(function () {
-                    resource.handleDependencies()
-                }, 0)
                 
-                // debugging warning
-                if (typeof ENABLE_DEFERRED_DEPS_WARNING != 'undefined')
-                    console.log('Deferred deps handling for class [' + name + '], deps = [' + JSON.stringify(resource.dependencies) + ']')
+                var me      = this
+                var SUPER   = this.SUPER
+                
+                var current
+                
+                //unshift is critical for correct order of readyListerens processing!
+                //constructing is delaying until resource will become ready 
+                resource.readyListeners.unshift(function () {
+                    me.inlineAllDeps(extend)
+                    
+                    Joose.Namespace.Manager.my.executeIn(currentModule, function () {
+                        
+                        SUPER.call(me, name, extend, defaultMeta, callback)
+                    })
+                })
+                
+                // running as <script> in browser or as main script in node
+                if (!resource.hasReadyCheckScheduled) 
+                    if (Joose.is_NodeJS) 
+                        resource.handleDependencies()
+                    else
+                        // defer the dependencies loading, because they actually could be provided later in the same bundle file
+                        // this, however, affect performance, so bundles should be created in the dependencies-ordered way
+                        setTimeout(function () {
+                            resource.handleDependencies()
+                        }, 0)
+                
+                
+                return this.create(name, Joose.Namespace.Keeper, {})
             }
-        
-            var me      = this
-            var SUPER   = this.SUPER
-            
-            
-            //unshift is critical for correct order of readyListerens processing!
-            //constructing is delaying until resource will become ready 
-            resource.readyListeners.unshift(function () {
-                me.inlineAllDeps(extend)
-                
-                SUPER.call(me, name, extend, defaultMeta, callback)
-            })
-            
-            return this.create(name, Joose.Namespace.Keeper, {})
         },
         
         
-        create : function () {
-            var meta = this.SUPERARG(arguments).meta
-            
+        prepareMeta : function (meta) {
             meta.resource = meta.resource || JooseX.Namespace.Depended.Manager.my.getMyResource('joose', meta.name, meta.c)
-            
-            return meta.c
         }
     },
     //eof override
@@ -223,13 +238,3 @@ Joose.Namespace.Manager.meta.extend({
     does : JooseX.Namespace.Depended
 })
 
-
-Joose.Namespace.Keeper.meta.extend({
-    
-    before : {
-        
-        plant: function (targetClass) {
-            targetClass.meta.resource = this.resource
-        }
-    }
-})
