@@ -188,7 +188,8 @@ Class('JooseX.Namespace.Depended.Resource', {
             var urls = Joose.O.wantArray(this.getUrls())
             
             var me = this
-
+            
+            
             // this delays the 'checkReady' until the resourse will be *fully* materialized
             // *fully* means that even the main class of the resource is already "ready"
             // the possible other classes in the same file could be not
@@ -201,12 +202,15 @@ Class('JooseX.Namespace.Depended.Resource', {
                 
                 me.loadedFromURL = url
                 
-                me.materialize(resourceBlob, url)
+                Joose.Namespace.Manager.my.executeIn(Joose.top, function () {
+                    
+                    me.materialize(resourceBlob, url)
+                })
                 
                 me.hasReadyCheckScheduled = false
                 
-                
-                me.checkReady()
+                // handle the dependency of the class after its materialization completition
+                me.handleDependencies()
             }
             
             var onerror = function (e) {
