@@ -5,41 +5,30 @@ Role('JooseX.Namespace.Depended.Transport.NodeJS', {
     override : {
         
         load: function (url, onsuccess, onerror) {
-            
-//            try {
-//                require(url)
-//                
-//            } catch (e) {
-//                
-//                onerror(e)
-//                
-//                return
-//            }
-//            
-//            onsuccess('', url)
-            
             var fs = require('fs')
             
-            fs.readFile(url, function (err, data) {
-                if (err) {
-                    onerror(err)
-                    
-                    return
-                }
+            try {
+                var content = fs.readFileSync(url, 'utf8')
                 
-                onsuccess(data, url)
-            })            
+            } catch (e) {
+                
+                onerror(e)
+                
+                return
+            }
+            
+            onsuccess(content, url)
+            
+//            fs.readFile(url, function (err, data) {
+//                if (err) {
+//                    onerror(err)
+//                    
+//                    return
+//                }
+//                
+//                onsuccess(data, url)
+//            })            
         }
-//        ,
-        
-        
-//        getUrls : function () {
-//            return [ this.token ]
-//        },
-        
-        
-//        materialize : function () {
-//        }
     }
 })
 
