@@ -2,6 +2,8 @@ Release history for JooseX.Namespace.Depended
 
 {{ $NEXT }}
 
+    - NodeJS transport made synchronous
+
 0.16      2011-01-23 12:40
 
     - minor performance improvement - avoid extra `prepareProperties` call, instead call directly to SUPER method
